# pmstereo

./: .gitignore  ATTRIBUTION.md  CMakeLists.txt  COPYING_eval.txt  LICENSE  Makefile  README.md  base_kernel.hpp  eval.cpp  eval.hpp  fast_exp_array.cpp  fast_exp_array_declaration.cpp  fast_exp_instr.cpp  generate_fast_exp_array.py  generate_fast_exp_array_declaration.py  generate_fast_exp_instr.py  helpers.hpp  kernel_registration.hpp  kernels-baseline.hpp  kernels-compressed_planes.hpp  kernels-fast_exp.hpp  kernels-fastexp-array-declaration.hpp  kernels-fastexp-array.hpp  kernels-fastexp-instr.hpp  kernels-inline_l1_norm.hpp  kernels-remove_if.hpp  kernels-removed_inside_and_other.hpp  kernels-rgba.hpp  kernels-simd_v0.hpp  kernels-simd_v1.hpp  kernels-simd_v10.hpp  kernels-simd_v11.hpp  kernels-simd_v12.hpp  kernels-simd_v13.hpp  kernels-simd_v14.hpp  kernels-simd_v15.hpp  kernels-simd_v16.hpp  kernels-simd_v17.hpp  kernels-simd_v18.hpp  kernels-simd_v2.hpp  (+16 more)
cluster/: lsf.o91511321
plots/: plots-final.R  run-bar-chart-validation.txt  run-size-dependency-mcost.txt  run-size-dependency.txt
scripts/: example-compute.sh  example-eval.sh  fullres-teddy-compute.sh  fullres-teddy-eval.sh  report-run-size-dependency-euler.sh  run-bar-chart-validation-euler.sh  run-size-dependency-euler.sh  setup-environment-euler.sh  setup-environment-leonhard.sh  size-dependency.sh  time-all-kernels-final.sh  time-all-kernels.sh  time-all-teddy-mcost-euler.sh  time-all-teddy-mcost-leo.sh  time-all-teddy-series-euler.sh  time-all-teddy-series-leo.sh  time-teddy-kernel.sh  (+4 more)
(+10 files in other folders)
